# my_python_react_bootcamp

./: .gitignore  devenv.nix
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/versions/: 297da840f380_shackra_create_monster_table.py
