[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "flask-sqlalchemy>=3.1.1",
    "pg8000>=1.31.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
]
