[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "flask-sqlalchemy>=3.1.1",
    "pg8000>=1.31.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pyls-memestra>=0.0.16",
    "pylsp-rope>=0.1.17",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server[mccabe,pyflakes,rope]>=1.13.1",
]
